Workaround checker bug. Update nbviewer link.

--- a/jnotebook/mlperf-inference-v0.5/dividiti.ipynb
+++ b/jnotebook/mlperf-inference-v0.5/dividiti.ipynb
@@ -27,7 +27,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "A live version of this Jupyter Notebook can be viewed [here](https://nbviewer.jupyter.org/urls/dl.dropbox.com/s/1xlv5oacgobrfd4/mlpef-inference-v0.5-dividiti.ipynb)."
+    "A live version of this Jupyter Notebook can be viewed [here](https://nbviewer.jupyter.org/urls/dl.dropbox.com/s/1xlv5oacgobrfd4/mlperf-inference-v0.5-dividiti.ipynb)."
    ]
   },
   {
@@ -1332,10 +1332,19 @@
     "#             trace_json_name = 'mlperf_log_trace.json'\n",
     "#             trace_json_path = os.path.join(last_dir, trace_json_name)\n",
     "#             with open(trace_json_path, 'w') as trace_json_file:\n",
-    "#                 json.dump(mlperf_log.get('trace',{}), trace_json_file, indent=2)\n",
-    "\n",
+    "#                 json.dump(mlperf_log.get('trace',{}), trace_json_file, indent=2)    \n",
+    "    \n",
     "    print(\"*\" * 100)\n",
     "    submission_checker_py = os.path.join(upstream_path, 'v0.5', 'tools', 'submission', 'submission-checker.py')\n",
+    "    \n",
+    "    # The checker has a weird bug. When submitting to open, 'closed/<organization>/results' must exist on disk.\n",
+    "    # Vice versa, When submitting to closed, 'open/<organization>/results' must exist on disk. \n",
+    "    # Therefore, create both directories if they do not exist before invoking the checker.\n",
+    "    open_org_results_dir = os.path.join(root_dir, 'open', organization, 'results')\n",
+    "    closed_org_results_dir = os.path.join(root_dir, 'closed', organization, 'results')\n",
+    "    !mkdir -p $open_org_results_dir\n",
+    "    !mkdir -p $closed_org_results_dir\n",
+    "    # Run the checker.\n",
     "    checker_log = !python3 $submission_checker_py --input $root_dir --submitter $submitter\n",
     "    checker_log = \"\\n\".join(checker_log)\n",
     "    print(checker_log)\n",
@@ -1348,18 +1357,18 @@
     "\n",
     "    return\n",
     "\n",
-    "# To check \"double-landing\" :)\n",
-    "# repos = [\n",
-    "#     'mlperf.closed.image-classification.hikey960.armnn-v19.08.opencl',\n",
-    "#     'mlperf.closed.image-classification.hikey960.armnn-v19.08.neon'\n",
-    "# ]\n",
-    "repos = [\n",
-    "    'mlperf.open.image-classification.firefly.armnn-v19.08.opencl'\n",
-    "]\n",
-    "# for repo_uoa in repos:\n",
-    "#     # The path is where mlperf/submissions_inference_0_5 is cloned under.\n",
-    "#     check_experimental_results(repo_uoa, path='/home/anton/projects/mlperf/')"
+    "repos = repos_image_classification_closed\n",
+    "for repo_uoa in repos:\n",
+    "    # The path is where mlperf/submissions_inference_0_5 is cloned under.\n",
+    "    check_experimental_results(repo_uoa, path='/home/anton/projects/mlperf/')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
