Generate submission checklist for mate10pro.

--- a/jnotebook/mlperf-inference-v0.5/dividiti.ipynb
+++ b/jnotebook/mlperf-inference-v0.5/dividiti.ipynb
@@ -54,6 +54,7 @@
     "1. [Get the experimental data](#get)\n",
     "  1. [Image Classification - Closed](#get_image_classification_closed)\n",
     "  1. [Image Classification - Open](#get_image_classification_open)\n",
+    "1. [Generate the submission checklist](#checklist)\n",
     "1. [Check the experimental data](#check)"
    ]
   },
@@ -247,7 +248,7 @@
     "    \"division\": \"\",\n",
     "    \"submitter\": \"dividiti\",\n",
     "    \"status\": \"available\",\n",
-    "    \"system_name\": \"Firefly-RK3399\",\n",
+    "    \"system_name\": \"Firefly-RK3399 (firefly)\",\n",
     "\n",
     "    \"number_of_nodes\": \"1\",\n",
     "    \"host_processor_model_name\": \"Arm Cortex-A72 MP2 (big); Arm Cortex-A53 MP4 (LITTLE)\",\n",
@@ -300,7 +301,7 @@
     "    \"division\": \"\",\n",
     "    \"submitter\": \"dividiti\",\n",
     "    \"status\": \"available\",\n",
-    "    \"system_name\": \"Linaro HiKey960\",\n",
+    "    \"system_name\": \"Linaro HiKey960 (hikey960)\",\n",
     "\n",
     "    \"number_of_nodes\": \"1\",\n",
     "    \"host_processor_model_name\": \"Arm Cortex-A73 MP4 (big); Arm Cortex-A53 MP4 (LITTLE)\",\n",
@@ -353,7 +354,7 @@
     "    \"division\": \"\",\n",
     "    \"submitter\": \"dividiti\",\n",
     "    \"status\": \"available\",\n",
-    "    \"system_name\": \"Huawei Mate 10 Pro\",\n",
+    "    \"system_name\": \"Huawei Mate 10 Pro (mate10pro)\",\n",
     "\n",
     "    \"number_of_nodes\": \"1\",\n",
     "    \"host_processor_model_name\": \"Arm Cortex-A73 MP4 (big); Arm Cortex-A53 MP4 (LITTLE)\",\n",
@@ -406,7 +407,7 @@
     "    \"division\": \"\",\n",
     "    \"submitter\": \"dividiti\",\n",
     "    \"status\": \"available\",\n",
-    "    \"system_name\": \"Raspberry Pi 4\",\n",
+    "    \"system_name\": \"Raspberry Pi 4 (rpi4)\",\n",
     "\n",
     "    \"number_of_nodes\": \"1\",\n",
     "    \"host_processor_model_name\": \"Arm Cortex-A72 MP4\",\n",
@@ -980,6 +981,276 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id=\"checklist\"></a>\n",
+    "## Generate the submission checklist"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "checklist_template = \"\"\"MLPerf Inference 0.5 Self-Certification Checklist\n",
+    "\n",
+    "Name of Certifying Engineer(s): %(name)s\n",
+    "\n",
+    "Email of Certifying Engineer(s): %(email)s\n",
+    "\n",
+    "Name of System(s) Under Test: %(systems)s\n",
+    "\n",
+    "Division (check one):\n",
+    "- [%(open)s] Open\n",
+    "- [%(closed)s] Closed\n",
+    "\n",
+    "Category (check one):\n",
+    "- [x] Available\n",
+    "- [ ] Preview\n",
+    "- [ ] Research, Development, and Internal (RDI)\n",
+    "\n",
+    "Benchmark (check one):\n",
+    "- [%(mobilenet)s] MobileNet\n",
+    "- [ ] SSD-MobileNet\n",
+    "- [%(resnet)s] ResNet\n",
+    "- [ ] SSD-1200\n",
+    "- [ ] NMT\n",
+    "- [%(other)s] Other, please specify:\n",
+    "\n",
+    "Please fill in the following tables adding lines as necessary:\n",
+    "97%%-tile latency is required for NMT only. 99%%-tile is required for all other models.\n",
+    "\n",
+    "### Single Stream Results Table\n",
+    "| SUT Name | Benchmark | Query Count | Accuracy |\n",
+    "|----------|-----------|-------------|----------|\n",
+    "| hikey960 | mobilenet | 50000       | 71.676%% |\n",
+    "| rpi4     | mobilenet | 50000       | 71.676%% |\n",
+    "| firefly  | mobilenet | 50000       | 71.676%% |\n",
+    "| mate10pro| mobilenet | 50000       | 71.516%% |\n",
+    "| hikey960 | mobilenet | 50000       | 76.522%% |\n",
+    "| rpi4     | mobilenet | 50000       | 76.442%% |\n",
+    "| firefly  | mobilenet | 50000       | 76.442%% |\n",
+    "| mate10pro| mobilenet | 50000       | 28.926%% |\n",
+    "\n",
+    "### Multi-Stream Results Table\n",
+    "| SUT Name | Benchmark | Query Count |  Accuracy | 97%%-tile Latency | 99%%-tile Latency |\n",
+    "|----------|-----------|-------------|-----------|------------------|------------------|\n",
+    "|          |           |             |           |                  |                  |\n",
+    "\n",
+    "### Server Results Table\n",
+    "| SUT Name | Benchmark | Query Count | Accuracy | 97%%-tile Latency | 99%%-tile Latency |\n",
+    "|----------|-----------|-------------|----------|------------------|------------------|\n",
+    "|          |           |             |          |                  |                  |\n",
+    "\n",
+    "### Offline Results Table\n",
+    "| SUT Name | Benchmark | Sample Count | Accuracy | \n",
+    "|----------|-----------|--------------|----------|\n",
+    "|          |           |              |          |\n",
+    "\n",
+    "Scenario (check all that apply):\n",
+    "- [x] Single-Stream\n",
+    "- [ ] Multi-Stream\n",
+    "- [ ] Server\n",
+    "- [ ] Offline\n",
+    "\n",
+    "For each SUT, does the submission meet the latency target for each\n",
+    "combination of benchmark and scenario? (check all that apply)\n",
+    "- [x] Yes (Single-Stream and Offline no requirements)\n",
+    "- [ ] Yes (MobileNet x Multi-Stream 50 ms @ 99%%)\n",
+    "- [ ] Yes (MobileNet x Server 10 ms @ 99%%)\n",
+    "- [ ] Yes (SSD-MobileNet x Multi-Stream 50 ms @ 99%%)\n",
+    "- [ ] Yes (SSD-MobileNet x Server 10 ms @ 99%%)\n",
+    "- [ ] Yes (ResNet x Multi-Stream 50 ms @ 99%%)\n",
+    "- [ ] Yes (ResNet x Server 15 ms @ 99%%)\n",
+    "- [ ] Yes (SSD-1200 x Multi-Stream 66 ms @ 99%%).\n",
+    "- [ ] Yes (SSD-1200 x Server 100 ms @ 99%%)\n",
+    "- [ ] Yes (NMT x Multi-Stream 100 ms @ 97%%)\n",
+    "- [ ] Yes (NMT x Server 250 ms @ 97%%)\n",
+    "- [ ] No\n",
+    "\n",
+    "\n",
+    "For each SUT, is the appropriate minimum number of queries or samples\n",
+    "met, depending on the Scenario x Benchmark? (check all that apply)\n",
+    "- [x] Yes (Single-Stream 1,024 queries)\n",
+    "- [ ] Yes (Offline 24,576 samples)\n",
+    "- [ ] Yes (NMT Server and Multi-Stream 90,112 queries)\n",
+    "- [ ] Yes (Image Models Server and Multi-Stream 270,336 queries)\n",
+    "- [ ] No\n",
+    "\n",
+    "For each SUT and scenario, is the benchmark accuracy target met?\n",
+    "(check all that apply)\n",
+    "- [%(mobilenet_accuracy_met)s] Yes (MobileNet 71.68%% x 98%%)\n",
+    "- [ ] Yes (SSD-MobileNet 0.22 mAP x 99%%)\n",
+    "- [%(resnet_accuracy_met)s] Yes (ResNet 76.46%% x 99%%)\n",
+    "- [ ] Yes (SSD-1200 0.20 mAP x 99%%)\n",
+    "- [ ] Yes (NMT 23.9 BLEU x 99%%)\n",
+    "- [%(accuracy_not_met)s] No\n",
+    "\n",
+    "For each SUT and scenario, did the submission run on the whole\n",
+    "validation set in accuracy mode? (check one)\n",
+    "- [x] Yes\n",
+    "- [ ] No\n",
+    "\n",
+    "How many samples are loaded into the QSL in performance mode?\n",
+    "1024\n",
+    "\n",
+    "For each SUT and scenario, does the number of loaded samples in the\n",
+    "QSL in performance mode meet the minimum requirement?  (check all that\n",
+    "apply)\n",
+    "- [x] Yes (ResNet and MobileNet 1,024 samples)\n",
+    "- [ ] Yes (SSD-MobileNet 256 samples)\n",
+    "- [ ] Yes (SSD-1200 64 samples)\n",
+    "- [ ] Yes (NMT 3,903,900 samples)\n",
+    "- [ ] No\n",
+    "\n",
+    "For each SUT and scenario, is the experimental duration greater than\n",
+    "or equal to 60 seconds?  (check one)\n",
+    "- [x] Yes\n",
+    "- [ ] No\n",
+    "\n",
+    "Does the submission use LoadGen? (check one)\n",
+    "- [x] Yes\n",
+    "- [ ] No\n",
+    "\n",
+    "Is your loadgen commit from one of these allowed commit hashes?\n",
+    "- [x] 61220457dec221ed1984c62bd9d382698bd71bc6\n",
+    "- [ ] 5684c11e3987b614aae830390fa0e92f56b7e800\n",
+    "- [ ] 55c0ea4e772634107f3e67a6d0da61e6a2ca390d\n",
+    "- [ ] d31c18fbd9854a4f1c489ca1bc4cd818e48f2bc5\n",
+    "- [ ] 1d0e06e54a7d763cf228bdfd8b1e987976e4222f\n",
+    "- [x] Other, please specify:\n",
+    "\n",
+    "Do you have any additional change to LoadGen? (check one)\n",
+    "- [ ] Yes, please specify:\n",
+    "- [x] No\n",
+    "\n",
+    "Does the submission run the same code in accuracy and performance\n",
+    "modes? (check one)\n",
+    "- [x] Yes\n",
+    "- [ ] No\n",
+    "\n",
+    "Where is the LoadGen trace stored? (check one)\n",
+    "- [x] Host DRAM\n",
+    "- [ ] Other, please specify:\n",
+    "\n",
+    "For the submitted result, what is the QSL random number generator seed?\n",
+    "- [x] 0x2b7e151628aed2a6ULL (3133965575612453542)\n",
+    "- [ ] Other, please specify:\n",
+    "\n",
+    "For the submitted results, what is the sample index random number generator seed?\n",
+    "- [x] 0x093c467e37db0c7aULL (665484352860916858)\n",
+    "- [ ] Other, please specify:\n",
+    "\n",
+    "For the submitted results, what is the schedule random number generator seed?\n",
+    "- [x] 0x3243f6a8885a308dULL (3622009729038561421)\n",
+    "- [ ] Other, please specify:\n",
+    "\n",
+    "For each SUT and scenario, is the submission run the correct number of\n",
+    "times for the relevant scenario? (check one)\n",
+    "- [x] Yes (Accuracy 1x Performance 1x Single-Stream, Multi-Stream,\n",
+    "Offline)\n",
+    "- [ ] Yes (Accuracy 1x Performance 5x Server)\n",
+    "- [ ] No\n",
+    "\n",
+    "Are the weights calibrated using data outside of the calibration set?\n",
+    "(check one)\n",
+    "- [ ] Yes\n",
+    "- [x] No\n",
+    "\n",
+    "What untimed pre-processing does the submission use? (check all that apply)\n",
+    "- [x] Resize\n",
+    "- [ ] Reorder channels or transpose\n",
+    "- [ ] Pad\n",
+    "- [x] A single crop\n",
+    "- [x] Mean subtraction and normalization\n",
+    "- [ ] Convert to whitelisted format\n",
+    "- [ ] No pre-processing\n",
+    "- [ ] Other, please specify:\n",
+    "\n",
+    "What numerics does the submission use? (check all that apply)\n",
+    "- [ ] INT4\n",
+    "- [ ] INT8\n",
+    "- [ ] INT16\n",
+    "- [ ] UINT8\n",
+    "- [ ] UINT16\n",
+    "- [ ] FP11\n",
+    "- [ ] FP16\n",
+    "- [ ] BF16\n",
+    "- [x] FP32\n",
+    "- [ ] Other, please specify:\n",
+    "\n",
+    "Which of the following techniques does the submission use? (check all that apply)\n",
+    "- [ ] Wholesale weight replacement\n",
+    "- [ ] Weight supplements\n",
+    "- [ ] Discarding non-zero weight elements\n",
+    "- [ ] Pruning\n",
+    "- [ ] Caching queries\n",
+    "- [ ] Caching responses\n",
+    "- [ ] Caching intermediate computations\n",
+    "- [ ] Modifying weights during the timed portion of an inference run\n",
+    "- [ ] Weight quantization algorithms that are similar in size to the\n",
+    "non-zero weights they produce\n",
+    "- [ ] Hard coding the total number of queries\n",
+    "- [ ] Techniques that boost performance for fixed length experiments but\n",
+    "are inapplicable to long-running services except in the offline\n",
+    "scenario\n",
+    "- [ ] Using knowledge of the LoadGen implementation to predict upcoming\n",
+    "lulls or spikes in the server scenario\n",
+    "- [ ] Treating beams in a beam search differently. For example,\n",
+    "employing different precision for different beams\n",
+    "- [ ] Changing the number of beams per beam search relative to the reference\n",
+    "- [ ] Incorporating explicit statistical information about the performance or accuracy sets\n",
+    "- [ ] Techniques that take advantage of upsampled images.\n",
+    "- [ ] Techniques that only improve performance when there are identical samples in a query.\n",
+    "- [x] None of the above\n",
+    "\n",
+    "Is the submission congruent with all relevant MLPerf rules?\n",
+    "- [x] Yes\n",
+    "- [ ] No\n",
+    "\n",
+    "For each SUT, does the submission accurately reflect the real-world\n",
+    "performance of the SUT?\n",
+    "- [x] Yes\n",
+    "- [ ] No\n",
+    "\"\"\"\n",
+    "\n",
+    "# \"systems\": \"Raspberry Pi 4 (rpi4); Firefly RK3399 (firefly); Linaro HiKey960 (hikey960); Huawei Mate 10 Pro (mate10pro)\",\n",
+    "def get_checklist(checklist_template=checklist_template, name=\"Anton Lokhmotov\", email=\"anton@dividiti.com\",\n",
+    "                  system=\"Raspberry Pi 4 (rpi4)\", division_closed=True,\n",
+    "                  mobilenet=True, resnet=False, other=False,\n",
+    "                  mobilenet_accuracy_met=True, resnet_accuracy_met=True, accuracy_not_met=False):\n",
+    "    def tick(var): return \"x\" if var else \" \"\n",
+    "    print(\"=\" * 100)\n",
+    "    print(system)\n",
+    "    print(\"=\" * 100)\n",
+    "    checklist = checklist_template % {\n",
+    "        \"name\" : name,\n",
+    "        \"email\" : email,\n",
+    "        \"systems\": system,\n",
+    "        # Division.\n",
+    "        \"open\" : tick(not division_closed),\n",
+    "        \"closed\" : tick(division_closed),\n",
+    "        # Benchmark.\n",
+    "        \"mobilenet\": tick(mobilenet),\n",
+    "        \"resnet\": tick(resnet),\n",
+    "        \"other\": tick(other),\n",
+    "        # Accuracy.\n",
+    "        \"mobilenet_accuracy_met\" : tick(mobilenet and mobilenet_accuracy_met),\n",
+    "        \"resnet_accuracy_met\" : tick(resnet and resnet_accuracy_met),\n",
+    "        \"accuracy_not_met\" : tick((resnet and not resnet_accuracy_met) or (mobilenet and not mobilenet_accuracy_met) or accuracy_not_met)\n",
+    "    }\n",
+    "    print(checklist)\n",
+    "    print(\"-\" * 100)\n",
+    "    \n",
+    "    return checklist\n",
+    "\n",
+    "null = get_checklist(system='Linaro HiKey 960 (hikey960)', mobilenet=False, resnet=True)\n",
+    "null = get_checklist(system='Huawei Mate 10 Pro (mate10pro)', mobilenet=False, resnet=True, resnet_accuracy_met=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<a id=\"check\"></a>\n",
     "## Check the experimental data"
    ]
@@ -1169,6 +1440,18 @@
     "        # FIXME: For now, not always \"per reference\".\n",
     "        benchmark_dir = os.path.join(code_dir, benchmark)\n",
     "        if not os.path.exists(benchmark_dir): os.mkdir(benchmark_dir)\n",
+    "\n",
+    "        # Write checklist for each benchmark.\n",
+    "        checklist_name = 'submission_checklist.txt'\n",
+    "        checklist_path = os.path.join(benchmark_dir, checklist_name)\n",
+    "        if(benchmark == 'mobilenet'):\n",
+    "            checklist = get_checklist(system='Huawei Mate 10 Pro (mate10pro)')\n",
+    "        elif(benchmark == 'resnet'):\n",
+    "            checklist = get_checklist(system='Huawei Mate 10 Pro (mate10pro)',\n",
+    "                                      mobilenet=False, resnet=True, resnet_accuracy_met=False)\n",
+    "        with open(checklist_path, 'w') as checklist_file:\n",
+    "            checklist_file.writelines(checklist)\n",
+    "            \n",
     "        implementation_dir = os.path.join(benchmark_dir, implementation)\n",
     "        if not os.path.exists(implementation_dir): os.mkdir(implementation_dir)\n",
     "        print('%s' % code_dir)\n",
@@ -1357,18 +1640,14 @@
     "\n",
     "    return\n",
     "\n",
-    "repos = repos_image_classification_closed\n",
+    "#repos = repos_image_classification_closed\n",
+    "repos = [\n",
+    "    'mlperf.closed.image-classification.mate10pro.armnn-v19.08.neon'\n",
+    "]\n",
     "for repo_uoa in repos:\n",
     "    # The path is where mlperf/submissions_inference_0_5 is cloned under.\n",
     "    check_experimental_results(repo_uoa, path='/home/anton/projects/mlperf/')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
