Add open results on rpi.

--- a/jnotebook/mlperf-inference-v0.5/dividiti.ipynb
+++ b/jnotebook/mlperf-inference-v0.5/dividiti.ipynb
@@ -365,7 +365,7 @@
     "    \"host_memory_configuration\": \"-\",\n",
     "    \"host_memory_capacity\": \"6 GiB\",\n",
     "    \"host_storage_capacity\": \"128 GiB\",\n",
-    "    \"host_storage_type\": \"-\",\n",
+    "    \"host_storage_type\": \"Flash\",\n",
     "    \"host_processor_interconnect\": \"-\",\n",
     "    \"host_networking\": \"-\",\n",
     "    \"host_networking_topology\": \"-\",\n",
@@ -383,7 +383,7 @@
     "    \"hw_notes\": \"https://en.wikichip.org/wiki/hisilicon/kirin/970\",\n",
     "\n",
     "    \"framework\": \"\",\n",
-    "    \"operating_system\": \"Android 8\",\n",
+    "    \"operating_system\": \"Android 9.1.0.300(C782E5R1P11); kernel 4.9.148 (Sat Jun 29 20:41:06 CST 2019)\",\n",
     "    \"other_software_stack\": \"Android NDK 17c (LLVM 6.0.2)\",\n",
     "    \"sw_notes\": \"Powered by Collective Knowledge v1.11.1\"\n",
     "}"
@@ -935,14 +935,10 @@
     "\n",
     "$ wget https://www.dropbox.com/s/3mmefvxc15m9o5b/mlperf.open.image-classification.firefly.armnn-v19.08.opencl.zip\n",
     "$ ck add repo --zip=mlperf.open.image-classification.firefly.armnn-v19.08.opencl.zip\n",
+    "\n",
+    "$ wget https://www.dropbox.com/s/hrupp4o4apo3dfa/mlperf.open.image-classification.firefly.armnn-v19.08.neon.zip\n",
+    "$ ck add repo --zip=mlperf.open.image-classification.firefly.armnn-v19.08.neon.zip\n",
     "```"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**TODO:** experiments with ArmNN  w/ Neon have started (11am 11/Oct)."
    ]
   },
   {
@@ -962,14 +958,10 @@
     "\n",
     "$ wget https://www.dropbox.com/s/m5illg8i2tse5hg/mlperf.open.image-classification.hikey960.armnn-v19.08.opencl.zip\n",
     "$ ck add repo --zip=mlperf.open.image-classification.hikey960.armnn-v19.08.opencl.zip\n",
+    "\n",
+    "$ wget https://www.dropbox.com/s/3cujqfe4ps0g66h/mlperf.open.image-classification.hikey960.armnn-v19.08.neon.zip\n",
+    "$ ck add repo --zip=mlperf.open.image-classification.hikey960.armnn-v19.08.neon.zip\n",
     "```"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**TODO:** experiments with ArmNN  w/ Neon have started (11am 11/Oct)."
    ]
   },
   {
@@ -983,7 +975,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**TODO**"
+    "```\n",
+    "$ wget https://www.dropbox.com/s/awhdqjq3p4tre2q/mlperf.open.image-classification.rpi4.tflite-v1.15.zip\n",
+    "$ ck add repo --zip=mlperf.open.image-classification.rpi4.tflite-v1.15.zip\n",
+    "\n",
+    "$ wget https://www.dropbox.com/s/0oketvqml7gyzl0/mlperf.open.image-classification.rpi4.armnn-v19.08.neon.zip\n",
+    "$ ck add repo --zip=mlperf.open.image-classification.rpi4.armnn-v19.08.neon.zip\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### `mate10pro` (a perfectly valid closed submission - just a little bit late after the deadline)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "$ wget https://www.dropbox.com/s/avi6h9m2demz5zr/mlperf.open.image-classification.mate10pro.tflite-v1.13.mobilenet.zip\n",
+    "$ ck add repo --zip=mlperf.open.image-classification.mate10pro.tflite-v1.13.mobilenet.zip\n",
+    "```"
    ]
   },
   {
@@ -1286,10 +1301,8 @@
     "    'mlperf.closed.image-classification.rpi4.tflite-v1.15', # https://github.com/mlperf/submissions_inference_0_5/pull/26/\n",
     "    'mlperf.closed.image-classification.rpi4.armnn-v19.08.neon', # https://github.com/mlperf/submissions_inference_0_5/pull/30\n",
     "    # mate10pro\n",
-    "    'mlperf.closed.image-classification.mate10pro.armnn-v19.08.neon',\n",
-    "    'mlperf.closed.image-classification.mate10pro.armnn-v19.08.opencl',\n",
-    "    # mate10pro - for testing the checker\n",
-    "    'mlperf.closed.image-classification.mate10pro.tflite-v1.13.mobilenet.BAD_LOADGEN', \n",
+    "    'mlperf.closed.image-classification.mate10pro.armnn-v19.08.neon', # https://github.com/mlperf/submissions_inference_0_5/pull/32\n",
+    "    'mlperf.closed.image-classification.mate10pro.armnn-v19.08.opencl', # https://github.com/mlperf/submissions_inference_0_5/pull/35\n",
     "]\n",
     "\n",
     "#\n",
@@ -1299,14 +1312,48 @@
     "    # firefly\n",
     "    'mlperf.open.image-classification.firefly.tflite-v1.15', # https://github.com/mlperf/submissions_inference_0_5/pull/39\n",
     "    'mlperf.open.image-classification.firefly.armnn-v19.08.opencl', # https://github.com/mlperf/submissions_inference_0_5/pull/40\n",
+    "    'mlperf.open.image-classification.firefly.armnn-v19.08.neon', # ready for upload\n",
     "    # hikey960\n",
     "    'mlperf.open.image-classification.hikey960.tflite-v1.15', # https://github.com/mlperf/submissions_inference_0_5/pull/37\n",
     "    'mlperf.open.image-classification.hikey960.armnn-v19.08.opencl', # https://github.com/mlperf/submissions_inference_0_5/pull/38\n",
+    "    'mlperf.open.image-classification.hikey960.armnn-v19.08.neon', # ready for upload\n",
     "    # rpi4\n",
-    "    #'mlperf.open.image-classification.rpi4.tflite-v1.15',\n",
+    "    'mlperf.open.image-classification.rpi4.tflite-v1.15', # ready for upload\n",
+    "    'mlperf.open.image-classification.rpi4.armnn-v19.08.neon', # ready for upload\n",
     "]\n",
     "\n",
     "repos = repos_image_classification_closed + repos_image_classification_open"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Merged on the submission day.\n",
+    "repos_image_classification_open_merged = [\n",
+    "    # firefly\n",
+    "    'mlperf.open.image-classification.firefly.tflite-v1.15', # https://github.com/mlperf/submissions_inference_0_5/pull/39\n",
+    "    'mlperf.open.image-classification.firefly.armnn-v19.08.opencl', # https://github.com/mlperf/submissions_inference_0_5/pull/40\n",
+    "    # hikey960\n",
+    "    'mlperf.open.image-classification.hikey960.tflite-v1.15', # https://github.com/mlperf/submissions_inference_0_5/pull/37\n",
+    "    'mlperf.open.image-classification.hikey960.armnn-v19.08.opencl', # https://github.com/mlperf/submissions_inference_0_5/pull/38\n",
+    "]\n",
+    "\n",
+    "repos_merged = repos_image_classification_closed + repos_image_classification_open_merged"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# repos_for_testing = [\n",
+    "#     # mate10pro - for testing the checker\n",
+    "#     'mlperf.closed.image-classification.mate10pro.tflite-v1.13.mobilenet.BAD_LOADGEN', \n",
+    "# ]"
    ]
   },
   {
@@ -1458,6 +1505,8 @@
     "        elif(benchmark == 'resnet'):\n",
     "            checklist = get_checklist(system='Huawei Mate 10 Pro (mate10pro)',\n",
     "                                      mobilenet=False, resnet=True, resnet_accuracy_met=False)\n",
+    "        else:\n",
+    "            checklist = ''\n",
     "        with open(checklist_path, 'w') as checklist_file:\n",
     "            checklist_file.writelines(checklist)\n",
     "            \n",
@@ -1649,10 +1698,10 @@
     "\n",
     "    return\n",
     "\n",
-    "#repos = repos_image_classification_closed\n",
-    "repos = [\n",
-    "    'mlperf.closed.image-classification.mate10pro.armnn-v19.08.neon'\n",
-    "]\n",
+    "# repos = [\n",
+    "#     'mlperf.closed.image-classification.mate10pro.armnn-v19.08.neon'\n",
+    "# ]\n",
+    "repos = repos_merged\n",
     "for repo_uoa in repos:\n",
     "    # The path is where mlperf/submissions_inference_0_5 is cloned under.\n",
     "    check_experimental_results(repo_uoa, path='/home/anton/projects/mlperf/')"
