Add Linux kernel and OpenCL driver versions.

--- a/jnotebook/mlperf-inference-v0.5/dividiti.ipynb
+++ b/jnotebook/mlperf-inference-v0.5/dividiti.ipynb
@@ -277,8 +277,8 @@
     "    \"hw_notes\": \"http://en.t-firefly.com/product/rk3399/; http://opensource.rock-chips.com/wiki_RK3399\",\n",
     "\n",
     "    \"framework\": \"\",\n",
-    "    \"operating_system\": \"Ubuntu 16.04.6 LTS\",\n",
-    "    \"other_software_stack\": \"GCC 7.4.0; Python 3.5.2\",\n",
+    "    \"operating_system\": \"Ubuntu 16.04.6 LTS; kernel 4.4.77 #554 (Thu Nov 30 11:30:11 HKT 2017)\",\n",
+    "    \"other_software_stack\": \"GCC 7.4.0; Python 3.5.2; OpenCL driver 1.2 v1.r13p0-00rel0-git(a4271c9).31ba04af2d3c01618138bef3aed66c2c\",\n",
     "    \"sw_notes\": \"Powered by Collective Knowledge v1.11.1\"\n",
     "}"
    ]
@@ -330,8 +330,8 @@
     "    \"hw_notes\": \"http://www.hisilicon.com/en/Products/ProductList/Kirin\",\n",
     "\n",
     "    \"framework\": \"\",\n",
-    "    \"operating_system\": \"Debian 9\",\n",
-    "    \"other_software_stack\": \"GCC 7.4.0; Python 3.5.3\",\n",
+    "    \"operating_system\": \"Debian 9; kernel 4.19.5-hikey #26 (Thu Aug 22 07:58:35 UTC 2019)\",\n",
+    "    \"other_software_stack\": \"GCC 7.4.0; Python 3.5.3; OpenCL driver 2.0 v1.r16p0\",\n",
     "    \"sw_notes\": \"Powered by Collective Knowledge v1.11.1\"\n",
     "}"
    ]
@@ -384,7 +384,7 @@
     "\n",
     "    \"framework\": \"\",\n",
     "    \"operating_system\": \"Android 9.1.0.300(C782E5R1P11); kernel 4.9.148 (Sat Jun 29 20:41:06 CST 2019)\",\n",
-    "    \"other_software_stack\": \"Android NDK 17c (LLVM 6.0.2)\",\n",
+    "    \"other_software_stack\": \"Android NDK 17c (LLVM 6.0.2); OpenCL driver 2.0 v1.r14p0-00cet0.0416641283c5d6e2d53c163d0ca99357\",\n",
     "    \"sw_notes\": \"Powered by Collective Knowledge v1.11.1\"\n",
     "}"
    ]
@@ -436,7 +436,7 @@
     "    \"hw_notes\": \"https://www.raspberrypi.org/products/raspberry-pi-4-model-b/specifications/\",\n",
     "\n",
     "    \"framework\": \"\",\n",
-    "    \"operating_system\": \"Debian 10\",\n",
+    "    \"operating_system\": \"Raspbian Buster (Debian 10); kernel 4.19.66-v7l+ #1253 (Thu Aug 15 12:02:08 BST 2019)\",\n",
     "    \"other_software_stack\": \"GCC 8.3.0; Python 3.7.3\",\n",
     "    \"sw_notes\": \"Powered by Collective Knowledge v1.11.1\"\n",
     "}"
